<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/btn_return_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:srcCompat="@drawable/btn_return" />

        <TextView
            android:id="@+id/textView-1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/title_register"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/editTextUserName_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/text_userName"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:text="" />

    <EditText
        android:id="@+id/editTextRealName_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/text_realName"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/editTextPhone_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/text_phone"
        android:inputType="numberSigned"
        android:text="" />

    <EditText
        android:id="@+id/editTextPassword_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:text="" />

    <EditText
        android:id="@+id/editTextRePassword_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/text_confirmPwd"
        android:inputType="textPassword"
        android:text="" />

    <ProgressBar
        android:id="@+id/progressBar_register"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>