<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_device_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/title_device_manager"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/btn_canuse_manager"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="@color/colorPrimary"
        android:text="@string/text_canuse"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_not_use_manager"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/text_can_not_use"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_add_manager"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/text_add_device"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>