<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/title_userInfo"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:srcCompat="@drawable/default_userimage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="32dp"
            android:gravity="center_vertical"
            android:text="用&#8194;户&#8194;名"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_userName_userInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:enabled="false"
            android:gravity="center_vertical"
            android:inputType="textPostalAddress"
            android:text=""
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:gravity="center_vertical"
            android:text="姓&#12288;&#12288;名"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_userRealName_userInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:enabled="false"
            android:gravity="center_vertical"
            android:inputType="textPostalAddress"
            android:text=""
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:gravity="center_vertical"
            android:text="手&#12288;&#12288;机"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_userPhone_userInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:enabled="false"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:gravity="center_vertical"
            android:text="密&#12288;&#12288;码"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_password_userInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:text=""
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:gravity="center_vertical"
            android:text="确认密码"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_rePassword_userInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:text=""
            android:textSize="18sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_updateUserInfo"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnUpdate_userInfo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/btn_update"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnLogout_userInfo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_logout"
        android:textColor="@color/read"
        android:textSize="16sp" />

</LinearLayout>